infra/keycloak/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
      annotations:
        homelab.dev/rollout-nonce: "2025-10-01-02"
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak@sha256:8d44614c74798322c4e07fbe0ecb15cfbb5879d69b484628555f58ade06f0d8c
        imagePullPolicy: IfNotPresent
        args:
            - start
            - --http-enabled=true
        ports:
          - name: http
            containerPort: 8080
        resources:
          requests: { cpu: 250m, memory: 512Mi }
          limits:   { memory: 1Gi }
